plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'idea'
    id 'org.sonarqube' version '4.4.1.3373'
    id 'jacoco'
}

group = 'com.edu'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
    maven {
        name = 'Central Portal Snapshots'
        url = 'https://central.sonatype.com/repository/maven-snapshots/'
    }
}

sonar {
    properties {
        property "sonar.projectKey", "FLAV-IA_asistente-cupos-back"
        property "sonar.organization", "flav-ia-1"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.projectName", "FLAV-IA"
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('jacocoTestReport') {
    dependsOn test
    reports {
        xml.required.set(true)
        html.required.set(true)
    }
}

tasks.named('sonarqube') {
    dependsOn tasks.named('jacocoTestReport')
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.opencsv:opencsv:5.8'
    implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-M6'
    implementation 'org.springframework.ai:spring-ai-openai'
    implementation 'mysql:mysql-connector-java:8.0.33'
    implementation 'com.zaxxer:HikariCP'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
}

tasks.register('setupCodeStyle', Copy) {
    group = 'IDE'
    description = 'Configura el estilo de código en .idea/'

    from file('config/idea/codeStyles')
    into file('.idea/codeStyles')
    include 'Project.xml'

    doFirst {
        mkdir '.idea/codeStyles'
    }
}

tasks.named('idea') {
    dependsOn 'setupCodeStyle'
}
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}